create location section

--- a/index.html
+++ b/index.html
@@ -44,12 +44,103 @@
       <div class="hero__content">
         <div class="hero__content__motto">
           <p>
-            The dramatic ambience is <br class="mobile_brak" />
+            The dramatic ambience is <br />
             captivating and enchanting.
           </p>
         </div>
-        <h1 class="hero__content__first">First</h1>
+        <h1 class="hero__content__first header__content">First</h1>
       </div>
+    </section>
+    <section class="about">
+      <section class="about__description">
+        <h2 class="about__description__h2 header__content">
+          AMERICAN <br class="mobile_break" />
+          RESTAURANT<br class="mobile_break" />
+          <br class="desktop_break" />
+          IN THE HEART OF <br class="mobile_break" />
+          WEST
+          <br class="desktop_break" />
+          HOLLYWOOD.
+        </h2>
+        <section class="about__description__content">
+          <p class="about__description__content__paragraph">
+            Housed in a charming Carr Jones designed historic building, Postino
+            welcomes guests with the celebration of food, family, friends and
+            life around the dinner table featuring our Italian influenced,
+            California cuisine.
+          </p>
+          <a href="/" class="about__description btn">READ MORE</a>
+        </section>
+      </section>
+      <section class="tastySection">
+        <section class="tastySection__images">
+          <img
+            src="./assets//eggs.png"
+            alt="eggs"
+            class="tastySection__images__img"
+          />
+          <img
+            src="./assets//inside.png"
+            alt="inside"
+            class="tastySection__images__img"
+          />
+        </section>
+        <section class="tastySection__text">
+          T
+          <br />
+          A
+          <br />
+          S
+          <br />
+          T
+          <br />
+          Y
+        </section>
+        <section class="tastySection__images">
+          <img
+            src="./assets//drink.png"
+            alt="dring"
+            class="tastySection__images__img"
+          />
+          <section class="tastySection__images__menu">
+            <a href="/" class="btn center"> VIEW MENU</a>
+            <img
+              src="./assets//lemon.png"
+              alt="lemon"
+              class="tastySection__images__img"
+            />
+          </section>
+        </section>
+      </section>
+      <section class="located">
+        <section class="located__content">
+          <h2 class="located__h2 header__content">
+            LOCATED IN <br class="desktop_break" />
+            MIDTOWN <br />
+            MANHATTAN.
+          </h2>
+          <p>
+            Butter Restaurant has maintained an exclusive niche restaurant scene
+            for stylish Manhattanites since its initial inception on Lafayette
+            St. in 2002. The American restaurant is helmed by Food Network star
+            and Executive Chef Alex Guarnaschelli, who uses greenmarket
+            offerings to create a seasonal menu.
+          </p>
+        </section>
+        <section class="located__content">
+          <p>
+            Butter began as Guarnaschellis' first restaurant as executive chef,
+            and she has gone on to create a following for herself worldwide. The
+            dining room at Butter offers a unique atmosphere and decor. Between
+            high arching ceilings- caped with a large format nature scape, cozy
+            booths- perfect for a romantic night out, and an inviting bar,
+            Butter caters to any guest, whether they are seeking either a formal
+            dining experience or one that is more casual.
+          </p>
+          <a href="/" class="located__btn"> READ MORE</a>
+        </section>
+        <section class="located__content__third"></section>
+      </section>
     </section>
   </body>
 </html>
