create delivery section

--- a/index.html
+++ b/index.html
@@ -141,6 +141,20 @@
         </section>
         <section class="located__content__third"></section>
       </section>
+      <section class="delivery">
+        <section class="delivery__info">
+          <img src="/assets/hand.png" alt="hand" class="delivery__info__img" />
+
+          <h2 class="delivery__info__h2 header__content">
+            DURING <br class="mobile_break" />
+            RESTAURANT <br class="mobile_break" />
+            HOURS <br class="desktop_break" />
+            WE OFFER <br class="mobile_break" />OUR ENTIRE MENU <br />FOR
+            DELIVERY.
+          </h2>
+        </section>
+        <section class="delivery__img"></section>
+      </section>
     </section>
   </body>
 </html>
