add break section

--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
         </section>
         <section class="delivery__img"></section>
       </section>
+      <section class="break"></section>
     </section>
   </body>
 </html>
