create chef section

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             life around the dinner table featuring our Italian influenced,
             California cuisine.
           </p>
-          <a href="/" class="about__description btn">READ MORE</a>
+          <a href="/" class="about__description yellow_btn">READ MORE</a>
         </section>
       </section>
       <section class="tastySection">
@@ -103,7 +103,7 @@
             class="tastySection__images__img"
           />
           <section class="tastySection__images__menu">
-            <a href="/" class="btn center"> VIEW MENU</a>
+            <a href="/" class="yellow_btn center"> VIEW MENU</a>
             <img
               src="./assets//lemon.png"
               alt="lemon"
@@ -119,7 +119,7 @@
             MIDTOWN <br />
             MANHATTAN.
           </h2>
-          <p>
+          <p class="located__content__paragraph">
             Butter Restaurant has maintained an exclusive niche restaurant scene
             for stylish Manhattanites since its initial inception on Lafayette
             St. in 2002. The American restaurant is helmed by Food Network star
@@ -128,7 +128,7 @@
           </p>
         </section>
         <section class="located__content">
-          <p>
+          <p class="located__content__paragraph">
             Butter began as Guarnaschellis' first restaurant as executive chef,
             and she has gone on to create a following for herself worldwide. The
             dining room at Butter offers a unique atmosphere and decor. Between
@@ -137,7 +137,7 @@
             Butter caters to any guest, whether they are seeking either a formal
             dining experience or one that is more casual.
           </p>
-          <a href="/" class="located__btn"> READ MORE</a>
+          <a href="/" class="black_btn"> READ MORE</a>
         </section>
         <section class="located__content__third"></section>
       </section>
@@ -156,6 +156,28 @@
         <section class="delivery__img"></section>
       </section>
       <section class="break"></section>
+      <section class="chef">
+        <section class="chef__img"></section>
+        <section class="chef__main">
+          <h2 class="chef__main__h2">JOHNNY COCHRAN</h2>
+          <h4 class="chef__main__h4">— HEAD CHEF —</h4>
+          <p>
+            Our head chef James Cochran is a chef like no other, heralding his
+            mix heritage through his food, from the Caribbean to Scotland and
+            his birth town Whitstable.
+          </p>
+        </section>
+        <section class="chef__description">
+          <p>
+            James grew up working at the famous Wheelers Oyster Bar, and has
+            since worked at The Ledbury and Harwood Arms, as well as the
+            controversial restaurant named after himself James Cochran EC3.
+            James has since won the BBC2 food programme Great British Menu last
+            year, and opened the doors to 12:51 in late August of last year.
+          </p>
+          <a href="/" class="black_btn"> READ MORE</a>
+        </section>
+      </section>
     </section>
   </body>
 </html>
