create San Francisco delivery section

--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@
         <section class="chef__main">
           <h2 class="chef__main__h2">JOHNNY COCHRAN</h2>
           <h4 class="chef__main__h4">— HEAD CHEF —</h4>
-          <p>
+          <p class="chef__main__paragraph">
             Our head chef James Cochran is a chef like no other, heralding his
             mix heritage through his food, from the Caribbean to Scotland and
             his birth town Whitstable.
           </p>
         </section>
         <section class="chef__description">
-          <p>
+          <p class="chef__description__paragraph">
             James grew up working at the famous Wheelers Oyster Bar, and has
             since worked at The Ledbury and Harwood Arms, as well as the
             controversial restaurant named after himself James Cochran EC3.
@@ -177,6 +177,20 @@
           </p>
           <a href="/" class="black_btn"> READ MORE</a>
         </section>
+      </section>
+      <section class="delivery_sf">
+        <h2 class="delivery_sf__h2 header__content">
+          DELIVERY IS FREE <br class="mobile_break" />
+          TO MOST <br />
+          NEIGHBORHOODS <br class="mobile_break" />
+          IN SAN <br class="desktop_break" />
+          FRANCISCO. ORDERS MUST BE <br class="desktop_break" />
+          A <br class="mobile_break" />
+          MINIMUM OF $34 <br class="mobile_break" />
+          PLUS TAX <br class="desktop_break" />
+          AND TIP.
+        </h2>
+        <img src="./assets/cake.png" alt="cake" class="delivery_sf__img" />
       </section>
     </section>
   </body>
