--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header class="header">
-      <section>logo</section>
+      <section>Tasty restaurant</section>
       <section>
         <?xml version="1.0" ?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
         <svg
@@ -48,7 +48,7 @@
             captivating and enchanting.
           </p>
         </div>
-        <h1 class="hero__content__first header__content">First</h1>
+        <h1 class="hero__content__first header__content">Tasty</h1>
       </div>
     </section>
     <section class="about">
@@ -191,6 +191,106 @@
           AND TIP.
         </h2>
         <img src="./assets/cake.png" alt="cake" class="delivery_sf__img" />
+      </section>
+      <section class="contact">
+        <section class="contact__container">
+          <section class="contact__content">
+            <section class="contact__content__social">
+              <p>First team stands ready to assist you at anytime.</p>
+              <p>Follow us on social media:</p>
+              <span
+                class="u-icon u-icon-circle u-social-facebook u-social-icon u-icon"
+              >
+                <svg
+                  x="0px"
+                  y="0px"
+                  viewBox="0 0 112.2 112.2"
+                  enable-background="new 0 0 112.2 112.2"
+                  xml:space="preserve"
+                  id="svg-129c"
+                  class="social_icon"
+                >
+                  <path
+                    d="M75.5,28.8H65.4c-1.5,0-4,0.9-4,4.3v9.4h13.9l-1.5,15.8H61.4v45.1H42.8V58.3h-8.8V42.4h8.8V32.2 c0-7.4,3.4-18.8,18.8-18.8h13.8v15.4H75.5z"
+                  ></path>
+                </svg>
+              </span>
+
+              <span
+                class="u-icon u-icon-circle u-social-icon u-social-twitter u-icon-2"
+              >
+                <svg
+                  x="0px"
+                  y="0px"
+                  viewBox="0 0 112.2 112.2"
+                  enable-background="new 0 0 112.2 112.2"
+                  xml:space="preserve"
+                  id="svg-815a"
+                  class="social_icon"
+                >
+                  <path
+                    d="M92.2,38.2c0,0.8,0,1.6,0,2.3c0,24.3-18.6,52.4-52.6,52.4c-10.6,0.1-20.2-2.9-28.5-8.2 c1.4,0.2,2.9,0.2,4.4,0.2c8.7,0,16.7-2.9,23-7.9c-8.1-0.2-14.9-5.5-17.3-12.8c1.1,0.2,2.4,0.2,3.4,0.2c1.6,0,3.3-0.2,4.8-0.7 c-8.4-1.6-14.9-9.2-14.9-18c0-0.2,0-0.2,0-0.2c2.5,1.4,5.4,2.2,8.4,2.3c-5-3.3-8.3-8.9-8.3-15.4c0-3.4,1-6.5,2.5-9.2 c9.1,11.1,22.7,18.5,38,19.2c-0.2-1.4-0.4-2.8-0.4-4.3c0.1-10,8.3-18.2,18.5-18.2c5.4,0,10.1,2.2,13.5,5.7c4.3-0.8,8.1-2.3,11.7-4.5 c-1.4,4.3-4.3,7.9-8.1,10.1c3.7-0.4,7.3-1.4,10.6-2.9C98.9,32.3,95.7,35.5,92.2,38.2z"
+                  ></path>
+                </svg>
+              </span>
+              <span
+                class="u-icon u-icon-circle u-social-icon u-social-instagram u-icon-3"
+              >
+                <svg
+                  x="0px"
+                  y="0px"
+                  viewBox="0 0 112.2 112.2"
+                  enable-background="new 0 0 112.2 112.2"
+                  xml:space="preserve"
+                  id="svg-17d6"
+                  class="social_icon"
+                >
+                  <path
+                    d="M55.9,32.9c-12.8,0-23.2,10.4-23.2,23.2s10.4,23.2,23.2,23.2s23.2-10.4,23.2-23.2S68.7,32.9,55.9,32.9z M55.9,69.4c-7.4,0-13.3-6-13.3-13.3c-0.1-7.4,6-13.3,13.3-13.3s13.3,6,13.3,13.3C69.3,63.5,63.3,69.4,55.9,69.4z"
+                  ></path>
+                  <path
+                    d="M79.7,26.8c-3,0-5.4,2.5-5.4,5.4s2.5,5.4,5.4,5.4c3,0,5.4-2.5,5.4-5.4S82.7,26.8,79.7,26.8z"
+                  ></path>
+                  <path
+                    d="M78.2,11H33.5C21,11,10.8,21.3,10.8,33.7v44.7c0,12.6,10.2,22.8,22.7,22.8h44.7c12.6,0,22.7-10.2,22.7-22.7 V33.7C100.8,21.1,90.6,11,78.2,11z M91,78.4c0,7.1-5.8,12.8-12.8,12.8H33.5c-7.1,0-12.8-5.8-12.8-12.8V33.7 c0-7.1,5.8-12.8,12.8-12.8h44.7c7.1,0,12.8,5.8,12.8,12.8V78.4z"
+                  ></path>
+                </svg>
+              </span>
+              <span
+                class="u-icon u-icon-circle u-social-icon u-social-pinterest u-icon-4"
+              >
+                <svg
+                  x="0px"
+                  y="0px"
+                  viewBox="0 0 112.2 112.2"
+                  enable-background="new 0 0 112.2 112.2"
+                  xml:space="preserve"
+                  id="svg-354f"
+                  class="social_icon"
+                >
+                  <path
+                    d="M61.9,79.8c-5.5-0.3-7.8-3.1-12-5.8c-2.3,12.4-5.4,24.3-13.8,30.5c-2.6-18.7,3.8-32.8,6.9-47.7 c-5.1-8.7,0.7-26.2,11.5-21.9c13.5,5.4-11.6,32.3,5.1,35.7c17.6,3.5,24.7-30.5,13.8-41.4c-15.7-16.1-45.7-0.5-42,22.3 c0.9,5.6,6.7,7.2,2.3,15c-10.1-2.2-13-10.2-12.7-20.7c0.6-17.3,15.5-29.3,30.5-31.1c19-2.2,36.8,6.9,39.2,24.7 C93.4,59.5,82.3,81.3,61.9,79.8z"
+                  ></path>
+                </svg>
+              </span>
+            </section>
+            <section class="contact__content__address">
+              <p>Tasty</p>
+              <p>70 W 45th St</p>
+              <p>New York, NY 10036</p>
+              <p>Phone: 555-666-2222</p>
+            </section>
+          </section>
+        </section>
+        <section class="contact__text">
+          C <br />
+          O <br />
+          N <br />
+          T <br />
+          A <br />
+          C <br />
+          T <br />
+        </section>
       </section>
     </section>
   </body>
