add lazy loading to images

--- a/index.html
+++ b/index.html
@@ -98,11 +98,13 @@
             src="./assets//eggs.png"
             alt="eggs"
             class="tastySection__images__img"
+            loading="lazy"
           />
           <img
             src="./assets//inside.png"
             alt="inside"
             class="tastySection__images__img"
+            loading="lazy"
           />
         </section>
         <section class="tastySection__text">
@@ -121,6 +123,7 @@
             src="./assets//drink.png"
             alt="dring"
             class="tastySection__images__img"
+            loading="lazy"
           />
           <section class="tastySection__images__menu">
             <a href="/" class="yellow_btn center"> VIEW MENU</a>
@@ -128,6 +131,7 @@
               src="./assets//lemon.png"
               alt="lemon"
               class="tastySection__images__img"
+              loading="lazy"
             />
           </section>
         </section>
@@ -163,7 +167,12 @@
       </section>
       <section class="delivery">
         <section class="delivery__info">
-          <img src="/assets/hand.png" alt="hand" class="delivery__info__img" />
+          <img
+            src="/assets/hand.png"
+            alt="hand"
+            loading="lazy"
+            class="delivery__info__img"
+          />
 
           <h2 class="delivery__info__h2 header__content">
             DURING <br class="mobile_break" />
@@ -210,7 +219,12 @@
           PLUS TAX <br class="desktop_break" />
           AND TIP.
         </h2>
-        <img src="./assets/cake.png" alt="cake" class="delivery_sf__img" />
+        <img
+          src="./assets/cake.png"
+          alt="cake"
+          class="delivery_sf__img"
+          loading="lazy"
+        />
       </section>
       <section class="contact">
         <section class="contact__container">
