add tasty text animation

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="css/index.css" />
     <title>Tasty restaurant</title>
   </head>
@@ -116,15 +117,11 @@
           />
         </section>
         <section class="tastySection__text" id="tasty">
-          T
-          <br />
-          A
-          <br />
-          S
-          <br />
-          T
-          <br />
-          Y
+          <p data-aos="fade-in">T</p>
+          <p data-aos="fade-in">A</p>
+          <p data-aos="fade-in">S</p>
+          <p data-aos="fade-in">T</p>
+          <p data-aos="fade-in">Y</p>
         </section>
         <section class="tastySection__images">
           <img
@@ -336,5 +333,9 @@
       </section>
     </section>
     <script src="index.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
