--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
       </div>
     </section>
     <section class="about">
-      <section class="about__description">
+      <section
+        class="about__description"
+        data-aos="fade-in"
+        data-aos-duration="1000"
+      >
         <h2 class="about__description__h2 header__content">
           AMERICAN <br class="mobile_break" />
           RESTAURANT<br class="mobile_break" />
@@ -108,20 +112,25 @@
             alt="eggs"
             class="tastySection__images__img"
             loading="lazy"
+            data-aos="fade-in"
+            data-aos-duration="1000"
           />
           <img
             src="./assets//inside.png"
             alt="inside"
             class="tastySection__images__img"
             loading="lazy"
+            data-aos="fade-in"
+            data-aos-duration="1000"
+            data-aos-offset="370"
           />
         </section>
         <section class="tastySection__text" id="tasty">
-          <p data-aos="fade-in">T</p>
-          <p data-aos="fade-in">A</p>
-          <p data-aos="fade-in">S</p>
-          <p data-aos="fade-in">T</p>
-          <p data-aos="fade-in">Y</p>
+          <p data-aos="fade-in" data-aos-duration="1000">T</p>
+          <p data-aos="fade-in" data-aos-duration="1000">A</p>
+          <p data-aos="fade-in" data-aos-duration="1000">S</p>
+          <p data-aos="fade-in" data-aos-duration="1000">T</p>
+          <p data-aos="fade-in" data-aos-duration="1000">Y</p>
         </section>
         <section class="tastySection__images">
           <img
@@ -129,6 +138,8 @@
             alt="dring"
             class="tastySection__images__img"
             loading="lazy"
+            data-aos="fade-up"
+            data-aos-duration="1000"
           />
           <section class="tastySection__images__menu">
             <a href="/" class="yellow_btn center"> VIEW MENU</a>
@@ -137,11 +148,19 @@
               alt="lemon"
               class="tastySection__images__img"
               loading="lazy"
+              data-aos="fade-in"
+              data-aos-duration="1000"
+              data-aos-offset="300"
             />
           </section>
         </section>
       </section>
-      <section class="located">
+      <section
+        class="located"
+        data-aos="fade-left"
+        data-aos-duration="1300"
+        data-aos-offset="450"
+      >
         <section class="located__content">
           <h2 class="located__h2 header__content">
             LOCATED IN <br class="desktop_break" />
