change located section animation

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       </section>
       <section
         class="located"
-        data-aos="fade-left"
+        data-aos="fade-up"
         data-aos-duration="1300"
         data-aos-offset="450"
       >
